--- a/index.html
+++ b/index.html
@@ -35,20 +35,13 @@
   <meta name="keywords"
     content="chris astorga, chris astorga portfolio, Chris Astorga Portfolio, chrisastorga, chris astorga site, Chris Astorga Site, chris astorga me, chris astorga web, chris astorga github, chrisastorga site, chrisastorga uiverse, uiverse, chris astorga uiverse, chris astorga frontend developer, frontend developer, chris astorga, chris astorga" />
   <meta name="author" content="Chris Astorga" />
-  <meta property="og:image" content="https://www.vinodjangid.site/src/webp/vinod%20(2).webp" />
 
   <meta property="og:title" content="Chris Astorga | Portfolio" />
   <meta property="og:description"
     content="Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
-  <meta property="og:url" content="https://vinodjangid.site" />
-  <meta property="og:site_name" content="Chris Astorga Portfolio" />
-  <meta name="twitter:title" content="Chris Astorga | Portfolio" />
-  <meta name="twitter:image" content="https://www.vinodjangid.site/src/webp/vinod%20(2).webp" />
-  <meta name="twitter:url" content="https://vinodjangid.site" />
-
   <title>Chris Astorga | Portfolio</title>
-  <link rel="icon" type="image/x-icon" href="src/png/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="src/png/nav-avatar.png" />
   <!-- aos cdn -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- stylesheet -->
@@ -58,9 +51,7 @@
     href="https://fonts.googleapis.com/css2?family=Passions+Conflict&family=Orbitron&family=Fira+Code&family=Six+Caps" />
 
 <body class="body">
-  <audio loop="" id="audioPlayer" style="display: none">
-    <source src="src/mp3/preloader.mp3" type="audio/mp3" />
-  </audio>
+
   <div id="preloader"></div>
   <noscript>Allow Javascript</noscript>
 
@@ -70,7 +61,7 @@
 
     <div class="navbar" id="navbar">
       <div class="hey">Hey!</div>
-      <div class="logo" tabindex="0" aria-label="vinod jangid logo">
+      <div class="logo" tabindex="0" aria-label="chris astorga logo">
         <div class="logo-top">
           <img src="src/png/nav-avatar.png" alt="animation-head" />
         </div>
@@ -215,7 +206,7 @@
         </article>
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
           Web Designer & Developer with experience of Digital Concept Arts, Frontend Web
-          Designs. I Love fun Web UI, collaboration and making products.<br />
+          Designs. I Love fun Web UI, collaboration and doing freelance projects.<br />
           <br />
           I value simple content structure, clean design patterns, and
           thoughtful interactions.
@@ -381,14 +372,9 @@
                 <img src="src/webp/scali-favicon.webp" alt="pexelicon website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Scali Promotions</article>
                 <p class="ProjectDescription">
-                  Scali Promotions: A world of personalized file folder icons to
-                  transform your PC into a reflection of your style.
+                  Scali Promotions: This is an online place for promoting shows from different parts of the world to perform in Australia. I buit them this site from scratch and also designed their logo. This is an Australian based business. 
                 </p>
                 <div class="project-buttons">
-                  <!-- <a href="https://github.com/vinodjangid07/Pexelicons" target="_blank" class="github-redirect"
-                    aria-label="Visit Pexelicons on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
-                  </a> -->
                   <a href="https://scalipromotions.com/" target="_blank" class="cta"
                     aria-label="Visit Pexelicons Live">
                     <span>Live view</span>
@@ -405,6 +391,90 @@
             </div>
           </div>
 
+          <!-- ---------------------- -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box2" id="project-box2">
+              <div class="info-div">
+                <img src="src/webp/superstarcafe.webp" alt="Aquaregia website favicon"
+                  class="faviconforProjectAquaregia" />
+                <article class="ProjectHeading">The Superstar Cafe</article>
+                <p class="ProjectDescription">
+                  This is an Australian based coffee shop. I also built this online shop for them from the scratch, to reach a broader crowd or customers. 
+                </p>
+                <div class="project-buttons">
+                  <a href="https://thesuperstarcafe.com.au/" target="_blank" class="cta"
+                    aria-label="Visit superstarcafe Live">
+                    <span>Live view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/superstarcafe.webp" alt="superstarcafe website preview image" />
+              </div>
+            </div>
+          </div>
+          
+          <!-- ---------------------- -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box3" id="project-box3">
+              <div class="info-div">
+                <img src="src/webp/bellaresin-favicon.webp" alt="netflix website favicon" class="faviconforProject" />
+                <article class="ProjectHeading">Bella Resin Art</article>
+                <p class="ProjectDescription">
+                  Built this site from scratch to promote their arts online to reach more audience based in Australia. 
+                </p>
+                <div class="project-buttons">
+
+                  <a href="https://bellaresinart.com.au/" target="_blank" class="cta"
+                    aria-label="Visit bellaresinart live">
+                    <span>Live view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/bellaresin.webp" alt="bellaresinart preview image" />
+              </div>
+            </div>
+          </div>
+
+          <!-- ---------------------- -->
+
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box1" id="project-box1">
+              <div class="info-div">
+                <img src="src/webp/lifecycleloan-favicon.webp" alt="Axocean website favicon" class="faviconforProject" />
+                <article class="ProjectHeading">LifeCycle Loans</article>
+                <p class="ProjectDescription">
+                  LifeCycle Loans is an online website that caters and offers loan to eligible applicants based in Australia. 
+                </p>
+                <div class="project-buttons">
+
+                  <a href="https://lifecycleloans.com.au/" target="_blank" class="cta"
+                    aria-label="Visit axocean live">
+                    <span>Live view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/lifecycleloan.webp" alt="Axocean website preview image" />
+              </div>
+            </div>
+          </div>
+
+          <!-- ---------------------- -->
+
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box5" id="project-box5">
               <div class="info-div">
@@ -412,9 +482,7 @@
                   class="faviconforProject" />
                 <article class="ProjectHeading">Matcha Samurai</article>
                 <p class="ProjectDescription">
-                  Matcha Samurai is an ecommerce website built on wordpress by me
-                  as a freelancer. It specializes in selling anime
-                  merchandise.
+                  This is an ecommerce store that offers and let you experience how a Japanese matcha green tea tastes like. This site is built using Shopify and I just modified its design to give it a new look.  
                 </p>
                 <div class="project-buttons">
                   <a href="https://matchasamurai.com/" target="_blank" class="cta" aria-label="Visit Matcha Samurai live">
@@ -432,24 +500,21 @@
             </div>
           </div>
 
-          <!-- ---------------------- -->
-          <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box2" id="project-box2">
+          <!--  ---------------------- -->
+
+           <!-- ---------------------- -->
+
+           <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box5" id="project-box5">
               <div class="info-div">
-                <img src="src/webp/superstarcafe.webp" alt="Aquaregia website favicon"
-                  class="faviconforProjectAquaregia" />
-                <article class="ProjectHeading">The Superstar Cafe</article>
+                <img src="src/webp/tribupinas_favicon.webp" alt="matchasamurai website favicon"
+                  class="faviconforProject" />
+                <article class="ProjectHeading">TribuPinas Clothing</article>
                 <p class="ProjectDescription">
-                  A website for University Maharaja College fest "Aquaregia"
-                  for event registrations.
+                  This is a start up clothing brand that promotes the Philippine heritage and its historic sceneries and landmarks. (In Progress project)
                 </p>
                 <div class="project-buttons">
-                  <!-- <a href="https://github.com/vinodjangid07/Aquaregia" target="_blank" class="github-redirect"
-                    aria-label="Visit Aquaregia on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
-                  </a> -->
-                  <a href="https://thesuperstarcafe.com.au/" target="_blank" class="cta"
-                    aria-label="Visit Aquaregia Live">
+                  <a href="https://tribupinasclothing.com/" target="_blank" class="cta" aria-label="Visit TribuPinas Clothing live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
@@ -459,104 +524,13 @@
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/superstarcafe.webp" alt="Aquaregia website preview image" />
-              </div>
-            </div>
-          </div>
-          <!-- ---------------------- -->
-          <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box4" id="project-box4">
-              <div class="info-div">
-                <img src="src/webp/upmarketing-favicon.webp" alt="Qr generator website favicon" class="faviconforProject" />
-                <article class="ProjectHeading">Unleashing Potential</article>
-                <p class="ProjectDescription">
-                  Unleashing Potential webpage based in New Zealand.
-                </p>
-                <div class="project-buttons">
-                  <!-- <a href="https://www.unleashingpotential.co.nz/" target="_blank" class="github-redirect"
-                    aria-label="Visit qr generator on github">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
-                  </a> -->
-                  <a href="https://www.unleashingpotential.co.nz/" target="_blank" class="cta"
-                    aria-label="Visit qr generator live">
-                    <span>Live view</span>
-                    <svg viewBox="0 0 13 10" height="10px" width="15px">
-                      <path d="M1,5 L11,5"></path>
-                      <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-              <div class="image-div">
-                <img src="src/webp/upmarketing.webp" alt="upmarketing website preview image" />
+                <img src="src/webp/tribupinas.webp" alt="tribupinas clothing website preview image" />
               </div>
             </div>
           </div>
 
-          <!-- ---------------------- -->
-          <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box3" id="project-box3">
-              <div class="info-div">
-                <img src="src/webp/bellaresin-favicon.webp" alt="netflix website favicon" class="faviconforProject" />
-                <article class="ProjectHeading">Bella Resin Art</article>
-                <p class="ProjectDescription">
-                  A webpage to categorize the shows to redirect user to watch
-                  the show.
-                </p>
-                <div class="project-buttons">
-                  <!-- <a href="https://github.com/vinodjangid07/Netflix-clone" target="_blank" class="github-redirect"
-                    aria-label="Visit Netflix clone on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
-                  </a> -->
-                  <a href="https://bellaresinart.com.au/" target="_blank" class="cta"
-                    aria-label="Visit netflix clone live">
-                    <span>Live view</span>
-                    <svg viewBox="0 0 13 10" height="10px" width="15px">
-                      <path d="M1,5 L11,5"></path>
-                      <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-              <div class="image-div">
-                <img src="src/webp/bellaresin.webp" alt="netflix clone website preview image" />
-              </div>
-            </div>
-          </div>
+          <!--  ---------------------- -->
 
-          <!-- ---------------------- -->
-
-          <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box1" id="project-box1">
-              <div class="info-div">
-                <img src="src/webp/lifecycleloan-favicon.webp" alt="Axocean website favicon" class="faviconforProject" />
-                <article class="ProjectHeading">LifeCycle Loans</article>
-                <p class="ProjectDescription">
-                  LifeCycle Loans website frontend work to choose people their
-                  favorite design of product and redirect to flipkart shopping
-                  site.
-                </p>
-                <div class="project-buttons">
-                  <!-- <a href="https://github.com/vinodjangid07/AXOCEAN" target="_blank" class="github-redirect"
-                    aria-label="Visit axocean on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
-                  </a> -->
-                  <a href="https://lifecycleloans.com.au/" target="_blank" class="cta"
-                    aria-label="Visit axocean live">
-                    <span>Live view</span>
-                    <svg viewBox="0 0 13 10" height="10px" width="15px">
-                      <path d="M1,5 L11,5"></path>
-                      <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-              <div class="image-div">
-                <img src="src/webp/lifecycleloan.webp" alt="Axocean website preview image" />
-              </div>
-            </div>
-          </div>
-          <!-- ---------------------- -->
         </div>
       </div>
     </section>
@@ -603,7 +577,7 @@
           </div>
         </div>
         <div class="footer-avatar-container">
-          <img src="src/png/footer-avatar-vinod.png" alt="animation-head" class="footer-avatar-img" />
+          <img src="src/png/footer_avatar.png" alt="animation-head" class="footer-avatar-img" />
           <div class="footer-avatar-face">
             <div class="footer-avatar-eye footer-left-eye">
               <div class="footer-pupil"></div>
