--- a/index.html
+++ b/index.html
@@ -254,17 +254,22 @@
         <div class="info-dp-section">
           <div class="about-info">
             <p tabindex="0">
-              Hi! My name is Chris. I'm a web designer and developer. I have been practicing it for almost 5 years now. 
-              I started doing it for fun and then later on for common friends when they learned about it.
+              Hi! I’m Chris, a passionate web designer and developer with over 6 years of experience helping businesses create stunning and functional websites. 
+              I specialize in building custom websites that are not only visually appealing but also optimized for performance, user experience, and functionality.
             </p>
             <br />
             <p tabindex="0"> 
-              And my network started to grow and eventually got a chance to do project for people from US, UK, Australia and New Zealand.
-              I do project based and freelancing for most of my clients.   
+              Throughout my career, I’ve had the privilege of working with diverse clients—from startups to established enterprises—transforming their ideas into fully responsive and engaging digital experiences. 
+              Whether it’s a simple website, an eCommerce store, or a complex web application, I focus on crafting unique solutions that meet each client’s specific needs and goals.   
             </p>
             <br />
             <p tabindex="0">
-              I build projects using WordPress, Shopify and custom codes if needed. I love building interesting and creative designs. 
+              I combine creativity with technical expertise to ensure every project I work on delivers a seamless experience, with clean, efficient code, intuitive design, and strong performance. 
+              I’m committed to staying up-to-date with the latest industry trends and technologies to provide my clients with innovative and future-proof solutions.
+            </p>
+            <p tabindex="0"> 
+              When I'm not designing or coding, I love exploring new web design trends, attending tech meetups, and collaborating with other professionals to expand my knowledge. My goal is to help you build a website that not only looks great but also drives results for your business.
+              Let’s work together to bring your vision to life!  
             </p>
              <!-- Resume button -->
       <button class="resume-btn" id="resume-btn" onclick="openURL()">
