--- a/index.html
+++ b/index.html
@@ -265,12 +265,11 @@
             <br />
             <p tabindex="0">
               I combine creativity with technical expertise to ensure every project I work on delivers a seamless experience, with clean, efficient code, intuitive design, and strong performance. 
-              I’m committed to staying up-to-date with the latest industry trends and technologies to provide my clients with innovative and future-proof solutions.
+              I’m committed to staying up-to-date with the latest industry trends and technologies to provide my clients with innovative and future-proof solutions. My goal is to help you build a website that not only looks great but also drives results for your business.
+              <br />
+              Let’s work together to bring your vision to life! 
             </p>
-            <p tabindex="0"> 
-              When I'm not designing or coding, I love exploring new web design trends, attending tech meetups, and collaborating with other professionals to expand my knowledge. My goal is to help you build a website that not only looks great but also drives results for your business.
-              Let’s work together to bring your vision to life!  
-            </p>
+            
              <!-- Resume button -->
       <button class="resume-btn" id="resume-btn" onclick="openURL()">
         <div class="sign">
